--- a/public/views/edit.ejs
+++ b/public/views/edit.ejs
@@ -22,7 +22,7 @@
               <div class="row">
                   <div class="col-lg-8">
                     <textarea class="form-control" name="content" placeholder="內容ㄎ" rows="3"></textarea><br/>
-                    <input class="item-new" type="submit" value="QQ"action="/create"><br/>
+                    <input class="item-new" type="submit" value="做事!!!"action="/create"><br/>
                   </div>
                   <div class="col-lg-4">
                     <img class="img-responsive" src="../images/oldman.jpg">
